objects/SCP_Communities_DTO__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <description>CIty input text field</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country Picklist</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BOUVET ISLAND</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Generalized industry names for the Lead/TP industry fields</description>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ENG/UTL</fullName>
                </value>
                <value>
                    <fullName>Center/ISPs</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Retail Services</fullName>
                </value>
                <value>
                    <fullName>Service Providers</fullName>
                </value>
                <value>
                    <fullName>Technology Services</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>WholeSale/Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SCP_Communities_DTO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State/Provide input text field</description>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Lead__c</fullName>
        <description>This field is used to display list of views on Lead filter page of SCP communities</description>
        <label>View</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>My Newly Assigned Leads</fullName>
                    <default>true</default>
                    <label>My Newly Assigned Leads</label>
                </value>
                <value>
                    <fullName>All Active Leads</fullName>
                </value>
                <value>
                    <fullName>My Accepted Leads</fullName>
                </value>
                <value>
                    <fullName>My Converted Leads</fullName>
                </value>
                <value>
                    <fullName>My Rejected Leads</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_TP__c</fullName>
        <description>View field used to display on TP filter page of SCP communities</description>
        <label>View</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>My Newly Assigned Prospects</fullName>
                    <default>true</default>
                    <label>My Newly Assigned Prospects</label>
                </value>
                <value>
                    <fullName>My Prospects</fullName>
                </value>
                <value>
                    <fullName>My Accepted Prospects</fullName>
                </value>
                <value>
                    <fullName>Uncovered Prospects</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_by_Current_Calendar__c</fullName>
        <description>Picklist option for the SCP Communities Dahsboard VF page</description>
        <label>View by Current Calendar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                    <default>true</default>
                    <label>Week</label>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Custom object used as a Data Transfer Object on customized SCP Communities pages, allowing to create picklist fields that can be translated with translation workbench</description>
    <label>SCP_Communities_DTO</label>
    <nameField>
        <label>SCP_Communities_DTO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SCP_Communities_DTO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>